# packaging-test

./: CMakeLists.txt  CasterSoundboard.pro  com.covarianttensor.CasterSoundboard.desktop  com.covarianttensor.CasterSoundboard.json
CasterSoundboard/qml/views/components/caster_board/: Component.qml
CasterSoundboard/qml/views/components/caster_player/: Component.qml
flatpak/: com.covarianttensor.CasterSoundboard.json
src/qml/views/: mainView.qml
